--- a/angular.json
+++ b/angular.json
@@ -67,6 +67,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "vaccine-notification-angular:build",
+            "host": "0.0.0.0",
+            "port": 80
+          },
           "configurations": {
             "production": {
               "browserTarget": "vaccine-notification-angular:build:production"
