--- a/angular.json
+++ b/angular.json
@@ -70,7 +70,8 @@
           "options": {
             "browserTarget": "vaccine-notification-angular:build",
             "host": "0.0.0.0",
-            "port": 80
+            "port": 80,
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
