--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "vaccine-notification-angular:build",
-            "host": "0.0.0.0",
+            // "host": "0.0.0.0",
             "port": 80,
             "disableHostCheck": true
           },
